[gd_scene load_steps=40 format=3 uid="uid://5cpf815wg7fp"]

[ext_resource type="Script" path="res://arrow.gd" id="1_ukpvq"]
[ext_resource type="Texture2D" uid="uid://u8pvcslpef0j" path="res://assets/Player1Arrow.png" id="1_vubxx"]
[ext_resource type="AudioStream" uid="uid://d0as8matkufqi" path="res://audio/sound effects/ArrowReleasedSound.mp3" id="2_qe41v"]
[ext_resource type="AudioStream" uid="uid://yfol7eed6fbr" path="res://audio/sound effects/FireArrowReleasedSound.mp3" id="2_y4ti1"]
[ext_resource type="Texture2D" uid="uid://cnden4jo77aby" path="res://assets/ArrowFire/BlueArrowFireSprite.png" id="3_cni1h"]
[ext_resource type="Texture2D" uid="uid://jmbgaubsptmi" path="res://assets/ArrowFire/ArrowFireSprite.png" id="4_07pq2"]
[ext_resource type="AudioStream" uid="uid://cswh8rkydjhqy" path="res://audio/sound effects/ArrowHitsWallOrGround.mp3" id="4_c42bj"]
[ext_resource type="AudioStream" uid="uid://bxduwx40eqxuj" path="res://audio/sound effects/FireSound.mp3" id="4_ka5r6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcolq"]
size = Vector2(12.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ys62m"]
size = Vector2(15, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1pej"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdxbb"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqpo5"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq433"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4wvb"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4apd"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uym7u"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6yya"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8klu"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4jlr"]
atlas = ExtResource("4_07pq2")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkuil"]
atlas = ExtResource("4_07pq2")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhs7x"]
atlas = ExtResource("4_07pq2")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hyh6"]
atlas = ExtResource("4_07pq2")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7gbg"]
atlas = ExtResource("4_07pq2")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut0dl"]
atlas = ExtResource("4_07pq2")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_llex2"]
atlas = ExtResource("4_07pq2")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwlxx"]
atlas = ExtResource("4_07pq2")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iikye"]
atlas = ExtResource("4_07pq2")
region = Rect2(512, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_no5a8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1pej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdxbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqpo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq433")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4wvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4apd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uym7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6yya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8klu")
}],
"loop": true,
"name": &"bluefire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4jlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkuil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhs7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hyh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7gbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ut0dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llex2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwlxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iikye")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tasg8"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_88xtp"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_71ng8"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j2wa"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8qna"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_emlcy"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy8lk"]
atlas = ExtResource("3_cni1h")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i2ss"]
atlas = ExtResource("3_cni1h")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e06fk"]
atlas = ExtResource("3_cni1h")
region = Rect2(512, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_yljls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tasg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88xtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71ng8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j2wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8qna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emlcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy8lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i2ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e06fk")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Arrow" type="CharacterBody2D" groups=["Projectiles"]]
z_index = 1
script = ExtResource("1_ukpvq")

[node name="Sounds" type="Node" parent="."]

[node name="FireArrowReleasedSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("2_y4ti1")
volume_db = 19.0
bus = &"Attack Sound Effects"

[node name="ArrowReleasedSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("2_qe41v")
volume_db = 15.0
bus = &"Attack Sound Effects"

[node name="ArrowFireSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_ka5r6")
volume_db = -10.0
bus = &"Attack Sound Effects"

[node name="ArrowHitsGroundOrWallSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_c42bj")
volume_db = 10.0
bus = &"Attack Sound Effects"

[node name="GiveNewArrowTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="ArrowEmergencyTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="ArrowDespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SlowArrowWallTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="FastArrowWallTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-0.5, 0)
texture = ExtResource("1_vubxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, -1.98523e-23)
shape = SubResource("RectangleShape2D_rcolq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3, 0)

[node name="Area2DCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_ys62m")

[node name="FlippedArrowEmergencyTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Fire" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(-1, -3)
scale = Vector2(0.0629578, 0.0615234)
sprite_frames = SubResource("SpriteFrames_no5a8")
autoplay = "default"
frame_progress = 0.272676

[node name="BlueFire" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(-1, -3)
scale = Vector2(0.0629578, 0.0615234)
sprite_frames = SubResource("SpriteFrames_yljls")
autoplay = "default"
frame_progress = 0.813446

[connection signal="timeout" from="GiveNewArrowTimer" to="." method="_on_give_new_arrow_timer_timeout"]
[connection signal="timeout" from="ArrowEmergencyTimer" to="." method="_on_arrow_emergency_timer_timeout"]
[connection signal="timeout" from="ArrowDespawnTimer" to="." method="_on_arrow_despawn_timer_timeout"]
[connection signal="timeout" from="SlowArrowWallTimer" to="." method="_on_slow_arrow_wall_timer_timeout"]
[connection signal="timeout" from="FastArrowWallTimer" to="." method="_on_fast_arrow_wall_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="FlippedArrowEmergencyTimer" to="." method="_on_flipped_arrow_emergency_timer_timeout"]
